--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ i{
 .sidebar-body {
     margin: 0;
     background: #121212;
+    /* z-index: 999; */
 }
 
 button {
@@ -126,4 +127,24 @@ footer{
 
 .body{
     margin: 4px;
+    /* z-index: -999; */
 }
+.mls-label{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;   
+    align-items: center; 
+    margin: 4px;
+    border: 1px solid #121212;
+    padding: 4px;
+    border-radius: 20px;
+}
+.mls-label label{
+ font-weight: 800;
+ align-items: flex-start;
+}
+
+.mls-label input{
+    /* border:1px solid #121212; */
+}
+
